# ContactManager

./: .gitignore  LICENSE  README.md
backend/: CMakeLists.txt  main.cpp  run.sh
backend/include/: Contact.h
backend/include/config/: DotEnv.h
backend/include/database/: InsertContact.h
backend/include/routes/: AddContact.h  DisplayContect.h
backend/sql/: CreateTable.sql  CreateUserTable.sql
backend/src/: Contact.cpp  main.cpp
frontend-ui/: package.json  pnpm-lock.yaml  start.sh
frontend-ui/app/: globals.css  layout.tsx  page.tsx
frontend-ui/app/add/: page.tsx
frontend-ui/app/components/: footer.tsx  navbar.tsx
frontend-ui/app/contacts/: page.tsx
frontend-ui/app/lib/api/: addContact.tsx  displayContact.tsx
frontend-ui/app/lib/types/: contact.tsx
frontend-ui/app/reminders/: page.tsx
